My stash, populates with popular and queried games, and prevent dups, scroll bars added for overflow

--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -10,9 +10,14 @@ h1, h2, h4 {
 	color: white;
 }
 
+.stashButton{
+	color: #6441a5;
+}
+
 iframe {
 	margin-left: 5%;
 	border: 1px solid #6441a5;
+	margin-top: 10px;
 }
 
 .row{
@@ -49,30 +54,27 @@ img {
 	padding-top: 5px;
 }
 
-.col-md-6
-{
-	
-	margin: 5px;
+.col-md-6 {	
+ 	margin: 5px;
 	border-radius: 10px;
   	padding: 10px; 
   	width: 570px;
   	height: 300px; 
-	/*border: 3px solid blue;*/
 	background-color: black;
 	opacity: 0.8;
 	border: 1px solid #6441a5;
 	font: "verdana", Helvetica, sans-serif, white;
+	overflow: scroll;
 }
 
-.col-md-12
-{
-	margin: 5px;
+.col-md-11 {
+	margin-left: 4%;
 	border-radius: 10px;
 	padding: 10px; 
-	/*width: auto;*/
-	height: 180px; 
+	height: 250px; 
 	background-color: black;
 	border: 1px solid #6441a5;
+	overflow-x: scroll;
 }
 
 .col-xs-6 {
